--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tiptap/extension-color": "^2.2.4",
     "@tiptap/extension-highlight": "^2.2.4",
     "@tiptap/extension-image": "^2.2.4",
+    "@tiptap/extension-link": "^2.10.3",
     "@tiptap/extension-table": "^2.10.3",
     "@tiptap/extension-table-cell": "^2.10.3",
     "@tiptap/extension-table-header": "^2.10.3",
